--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         </style>
     </head>
     <body>
-        <p class="kek">kwwsv://forxgbdqghu.jlwkxe.lr/EOLVV/lqgha.kwpo</p>
+        <p class="kek">qccyb://luxdmhjwmna.prcqdk.rx/Mnm213/</p>
         <img class="kek" src="https://eda.ru/img/eda/900x-/s1.eda.ru/StaticContent/Photos/120214132605/120214133104/p_O.jpg">
         <p>Это наша первая загадка, если вы не сможете решить её, тогда вы не имеете права играть дальше</p>
     </body>
